--- a/src/layouts/css/index.css
+++ b/src/layouts/css/index.css
@@ -2,9 +2,6 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  overflow-x: hidden;
-  margin-left: 5px;
-  margin-right: 5px;
 }
 body {
   margin: 0;
